--- a/profile.html
+++ b/profile.html
@@ -71,6 +71,8 @@
     }
 
     .top-bar {
+        width: 100%;
+        height: 50px;
       border-bottom: 1px solid #333;
       margin-bottom: 20px;
     }
@@ -79,7 +81,7 @@
 <body>
     <header>
 <div class="top-bar">
-    <div img src="./assets/netflix_logo.png" alt="n" style="width: 500px;"></div>
+    <div><img src="./assets/netflix_logo.png" alt="ff" style="width: 130px;"></div>
   </div>
   </header>
 
